# invoicer

./: .dockerignore  .gitignore  LICENSE  README.md  app.py  dockerfile  pyproject.toml
.github/workflows/: containerize.yml
docs/: template_sample.docx
invoicer/: config.py  invoice.py  log_config.py  mail.py  mail_account.py  order.py  order_mail_parsers.py  utils.py
tests/: test_order_mail_parser.py
