[tool.poetry]
name = "invoicer"
version = "0.1.0"
description = ""
authors = ["Mehmet Y. Alici <calientesea@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.6"
google-api-python-client = "^2.70.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.8.0"
dacite = "^1.7.0"
babel = "^2.11.0"
pycountry = "^22.3.5"
python-docx = "^0.8.11"
gender-guesser = "^0.4.0"
docx2pdf = "^0.1.8"
python-dateutil = "^2.8.2"
deep-translator = "^1.9.1"
pdfkit = "^1.0.0"
weasyprint = "^57.2"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
